Fix bug allobsRequested not decremented when "No one is observing game X' received Fix cosmetic bug watchers not wrapping Fix cosmetic bug player name text descenders being clipped Fix bug flipboard() not flipping player-status properly

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -53,6 +53,10 @@ html, body {
   text-align: center;
 }
 
+.game-watchers {
+  white-space: pre-wrap;
+}
+
 #left-panel {
   height: 460px;
 }
